<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AlarmClock</string>
    <string name="action_settings">Settings</string>

    <string name="details_alarm_name">Alarm Name</string>
	<string name="details_repeat_weekly">Repeat Weekly</string>
	<string name="details_sunday">Sunday</string>
	<string name="details_monday">Monday</string>
	<string name="details_tuesday">Tuesday</string>
	<string name="details_wednesday">Wednesday</string>
	<string name="details_thursday">Thursday</string>
	<string name="details_friday">Friday</string>
	<string name="details_saturday">Saturday</string>
	<string name="details_alarm_tone">Alarm Tone</string>
	<string name="details_alarm_tone_default">Select an alarm tone</string>
    <string name="default_time">00 : 00</string>
    <string name="sunday">S</string>
    <string name="monday">M</string>
    <string name="tuesday">T</string>
    <string name="wednesday">W</string>
    <string name="friday">F</string>
    <string name="alarm_title_screen">Alarm!</string>
    <string name="alarm_dimiss">Dismiss</string>

</resources>
